--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -160,6 +160,8 @@
     "\n",
     "# Your code here:\n",
     "\n",
+    "# Lo intento hacer sin regex, porque entiendo que practicamos solo las string operations\n",
+    "\n",
     "# Limpiamos la cadena poem\n",
     "\n",
     "bl =[\"\\n\", \".\", \",\", \";\", \":\", \"&\"]\n",
@@ -225,6 +227,8 @@
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
     "# Your code here:\n",
+    "\n",
+    "# Lo intento hacer sin regex, porque entiendo que practicamos solo las string operations\n",
     "\n",
     "# Limpiamos la cadena poem\n",
     "\n",
