--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Durante un tiempo no estuvo segura de si su marido era su marido...'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "' '.join(str_list)+'...'\n",
+    "\n"
    ]
   },
   {
@@ -50,12 +63,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Grocery list: bananas, bread, brownie mix, broccoli...'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "'Grocery list: '+\", \".join([i.lower() for i in food_list if i.startswith('b') or i.startswith('B')])+'...'\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -69,9 +96,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius: 4.5 is: 63.61725123519331\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -80,6 +117,10 @@
     "radius = 4.5\n",
     "\n",
     "def area(x, pi = math.pi):\n",
+    "    g=x**2*pi\n",
+    "    return g\n",
+    "\n",
+    "print(string1, radius, string2, area(radius))\n",
     "    # This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
     "    # Input: Float (and default value for pi)\n",
     "    # Output: Float\n",
@@ -106,9 +147,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Some', 'say', 'the', 'world', 'will', 'end', 'in', 'fire', 'Some', 'say', 'in', 'ice', 'From', 'what', 'I’ve', 'tasted', 'of', 'desire', 'I', 'hold', 'with', 'those', 'who', 'favor', 'fire', 'But', 'if', 'it', 'had', 'to', 'perish', 'twice', 'I', 'think', 'I', 'know', 'enough', 'of', 'hate', 'To', 'say', 'that', 'for', 'destruction', 'ice', 'Is', 'also', 'great', 'And', 'would', 'suffice']\n",
+      "['Some', 'say', 'the', 'world', 'will', 'end', 'in', 'fire', 'Some', 'say', 'in', 'ice', 'From', 'what', 'I’ve', 'tasted', 'of', 'desire', 'I', 'hold', 'with', 'those', 'who', 'favor', 'fire', 'But', 'if', 'it', 'had', 'to', 'perish', 'twice', 'I', 'think', 'I', 'know', 'enough', 'of', 'hate', 'To', 'say', 'that', 'for', 'destruction', 'ice', 'Is', 'also', 'great', 'And', 'would', 'suffice']\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -120,6 +170,19 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
+    " \n",
+    "a=poem.replace('\\n',' ')\n",
+    "b=a.replace('.','')\n",
+    "c=b.replace(',','')\n",
+    "d=c.split(' ')\n",
+    "\n",
+    "print(d)\n",
+    "\n",
+    "e=poem.replace('\\n',' ').replace('.','').replace(',','').split(' ')\n",
+    "print(e)\n",
+    "\n",
+    "keys=words\n",
+    "values=\n",
     "# Your code here:\n"
    ]
   },
@@ -132,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
