--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "'Durante un tiempo no estuvo segura de si su marido era su marido.'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "'Grocery list: bananas, bread, brownie mix, broccoli.'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "['T', 'P']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -337,17 +337,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<re.Match object; span=(0, 1), match='1'>\n",
-      "<re.Match object; span=(3, 4), match='1'>\n",
-      "<re.Match object; span=(9, 10), match='1'>\n",
-      "<re.Match object; span=(4, 5), match='4'>\n",
+      "None\n",
+      "None\n",
+      "<re.Match object; span=(0, 1), match='J'>\n",
+      "<re.Match object; span=(0, 1), match='A'>\n",
       "None\n",
       "['JohnSmith1', 'ABBY4']\n"
      ]
@@ -358,7 +358,7 @@
     "# Your code here:\n",
     "a=[]\n",
     "for i in data:\n",
-    "    print(re.search('[\\d+]', i))\n",
+    "    print(re.search('[\\d+]', i) and re.search('[A-Z]', i))\n",
     "    if re.search('[\\d+]', i) and re.search('[A-Z]', i):\n",
     "        a.append(i)\n",
     "    \n",
