--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Era feliz en su matrimonio aunque su marido era el mismo demonio...'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n"
+    "    str_list = ['Era', 'feliz', 'en', 'su', 'matrimonio', 'aunque', 'su', 'marido', 'era', 'el', 'mismo', 'demonio']\n",
+    "# Your code here:\n",
+    "\" \".join(str_list) + \"...\""
    ]
   },
   {
@@ -50,12 +62,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Grocery_list:', 'bananas, bread, brownie mix, broccoli...')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "#Grocery_list = \"Grocery_list:\", \" \" \",\".join(food_list) + \"...\"\n",
+    "\n",
+    "\"Grocery_list:\", \", \".join(\n",
+    "    \n",
+    "    #Haz minúsculas las palabras que se encuentran en la food_list si empiezan por \"B\" o si empiezan por \"b\"\n",
+    "    \n",
+    "    [i.lower() for i in food_list if i.startswith(\"B\") or i.startswith(\"b\")]\n",
+    "\n",
+    ")+ \"...\"\n",
+    "\n",
+    "   "
    ]
   },
   {
@@ -69,9 +103,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
+    "# Input: Float (and default value for pi)\n",
+    "# Output: Float\n",
+    "\n",
+    "# Sample input: 5.0\n",
+    "# Sample Output: 78.53981633\n",
+    "\n",
+    "# Your code here:\n",
+    "    \n",
+    "    \n",
+    "# Your output string here:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius: is: 63.61725123519331\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -80,17 +141,9 @@
     "radius = 4.5\n",
     "\n",
     "def area(x, pi = math.pi):\n",
-    "    # This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
-    "    # Input: Float (and default value for pi)\n",
-    "    # Output: Float\n",
-    "    \n",
-    "    # Sample input: 5.0\n",
-    "    # Sample Output: 78.53981633\n",
-    "    \n",
-    "    # Your code here:\n",
-    "    \n",
-    "    \n",
-    "# Your output string here:"
+    "    a = (x**2) * pi\n",
+    "    return a\n",
+    "print(string1, string2, area(radius))"
    ]
   },
   {
@@ -101,7 +154,7 @@
     "\n",
     "We have first looked at combining strings into one long string. There are times where we need to do the opposite and split the string into smaller components for further analysis. \n",
     "\n",
-    "In the cell below, split the string into a list of strings using the space delimiter. Count the frequency of each word in the string in a dictionary. Strip the periods, line breaks and commas from the text. Make sure to remove empty strings from your dictionary."
+    "In the cell below, split the string into a list of strings using the space delimiter. Count the frequency of each word in the string in a dictionary. Strip the periods, line breaks and commas from the text. Make sure to remove empty strings from your dictionary.each"
    ]
   },
   {
@@ -120,7 +173,84 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "#print(poem.split(\" \"))\n",
+    "a = poem.replace(\"\\n\",\"\")\n",
+    "\n",
+    "b= a.replace(\",\",\"\")\n",
+    "\n",
+    "c= b.replace(\".\", \"\")\n",
+    "\n",
+    "d= c.replace(\"I’ve\", \"I have\")\n",
+    "\n",
+    "e = d.split(\" \")\n",
+    "\n",
+    "e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Some',\n",
+       " 'say',\n",
+       " 'the',\n",
+       " 'world',\n",
+       " 'will',\n",
+       " 'end',\n",
+       " 'in',\n",
+       " 'fireSome',\n",
+       " 'say',\n",
+       " 'in',\n",
+       " 'iceFrom',\n",
+       " 'what',\n",
+       " 'I',\n",
+       " 'have',\n",
+       " 'tasted',\n",
+       " 'of',\n",
+       " 'desireI',\n",
+       " 'hold',\n",
+       " 'with',\n",
+       " 'those',\n",
+       " 'who',\n",
+       " 'favor',\n",
+       " 'fireBut',\n",
+       " 'if',\n",
+       " 'it',\n",
+       " 'had',\n",
+       " 'to',\n",
+       " 'perish',\n",
+       " 'twiceI',\n",
+       " 'think',\n",
+       " 'I',\n",
+       " 'know',\n",
+       " 'enough',\n",
+       " 'of',\n",
+       " 'hateTo',\n",
+       " 'say',\n",
+       " 'that',\n",
+       " 'for',\n",
+       " 'destruction',\n",
+       " 'iceIs',\n",
+       " 'also',\n",
+       " 'greatAnd',\n",
+       " 'would',\n",
+       " 'suffice']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = poem.replace(\"\\n\",\"\").replace(\",\",\"\").replace(\".\", \"\").replace(\"I’ve\", \"I have\").split(\" \")\n",
+    "a\n",
+    "\n"
    ]
   },
   {
@@ -132,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
