--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n"
+    "\" \".join(str_list).rstrip()+\".\""
    ]
   },
   {
@@ -50,12 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "food_list = [e for e in food_list if e[0].lower() == \"b\"]\n",
+    "#print([e for e in food_list if e[0] in \"bB\"])\n",
+    "\n",
+    "food_list = \", \".join(food_list).lower()\n",
+    "print(\"Grocery list: \"+food_list+\".\")\n",
+    "#print(type(food_list))\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -69,17 +76,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius 5 is: 78.53981633974483\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
-    "string1 = \"The area of the circle with radius:\"\n",
+    "string1 = \"The area of the circle with radius\"\n",
     "string2  = \"is:\"\n",
-    "radius = 4.5\n",
+    "radius = 5\n",
+    "#radius es un avariable global: accesible desde culquier punto del código\n",
     "\n",
     "def area(x, pi = math.pi):\n",
+    "    return math.pi*x*x\n",
+    "\n",
+    "c = area(radius)\n",
+    "\n",
+    "a = (\"{} {}\".format(string1,radius))\n",
+    "b = (\" {} {}\".format(string2,c))\n",
+    "print(a+b)\n",
+    "\n",
+    "    \n",
+    "    # cumputa el área del círculo a partir del radio\n",
+    "    #mete los valores en el string\n",
+    "    # ! include spaces\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    # This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
     "    # Input: Float (and default value for pi)\n",
     "    # Output: Float\n",
@@ -88,7 +122,6 @@
     "    # Sample Output: 78.53981633\n",
     "    \n",
     "    # Your code here:\n",
-    "    \n",
     "    \n",
     "# Your output string here:"
    ]
@@ -106,9 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Some': 2, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire': 2, 'ice': 2, 'From': 1, 'what': 1, 'I': 4, 've': 1, 'tasted': 1, 'of': 2, 'desire': 1, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'But': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 1, 'perish': 1, 'twice': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'To': 1, 'that': 1, 'for': 1, 'destruction': 1, 'Is': 1, 'also': 1, 'great': 1, 'And': 1, 'would': 1, 'suffice': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -120,7 +161,56 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "#LISTA DE STRINGS:\n",
+    "poem = re.split('[^a-zA-Z]', poem)\n",
+    "\n",
+    "#poem YA ES LISTA. Elimino las comas y espacios que sobran\n",
+    "poem = [e for e in poem if e!=\",\" and e!=\"\"]\n",
+    "\n",
+    "#print(poem)\n",
+    "\n",
+    "def contarFrecuencia(texto):\n",
+    "    d = {}\n",
+    "    for palabra in texto:\n",
+    "        d[palabra] = texto.count(palabra)\n",
+    "    return d\n",
+    "            \n",
+    "print(contarFrecuencia(poem))\n",
+    "\n",
+    "#d['gg'] = 6\n",
+    "    \n",
+    "\n",
+    "# usar el delimitador de espacios para:\n",
+    "# romper el string en en una lista de strings\n",
+    "# contar la frecuencia de cada palabra del string en un diccionario\n",
+    "# Eliminar los puntos, saltos de línea y comas del texto.\n",
+    "# eliminar los vacíos\n",
+    "\n",
+    "# Your code here:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# EJEMPLO !!!\n",
+    "\n",
+    "\n",
+    "#d = {}\n",
+    "#d['a'] = 6\n",
+    "#d['d'] = 6\n",
+    "#d['gg'] = 6\n",
+    "\n",
+    "# d['gg'] = d['gg'] + 1\n"
    ]
   },
   {
@@ -132,11 +222,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'was', 'angry', 'with', 'my', 'friend', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'i', 'was', 'angry', 'with', 'my', 'foe', 'i', 'told', 'it', 'not', 'my', 'wrath', 'did', 'grow', 'and', 'i', 'waterd', 'it', 'in', 'fears', 'night', 'morning', 'with', 'my', 'tears', 'and', 'i', 'sunned', 'it', 'with', 'smiles', 'and', 'with', 'soft', 'deceitful', 'wiles', 'and', 'it', 'grew', 'both', 'day', 'and', 'night', 'till', 'it', 'bore', 'an', 'apple', 'bright', 'and', 'my', 'foe', 'beheld', 'it', 'shine', 'and', 'he', 'knew', 'that', 'it', 'was', 'mine', 'and', 'into', 'my', 'garden', 'stole', 'when', 'the', 'night', 'had', 'veild', 'the', 'pole', 'in', 'the', 'morning', 'glad', 'i', 'see', 'my', 'foe', 'outstretched', 'beneath', 'the', 'tree']\n",
+      "100\n",
+      "7\n",
+      "['i', 'was', 'angry', 'with', 'my', 'friend', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'i', 'was', 'angry', 'with', 'my', 'foe', 'i', 'told', 'not', 'my', 'wrath', 'did', 'grow', 'i', 'waterd', 'fears', 'night', 'morning', 'with', 'my', 'tears', 'i', 'sunned', 'with', 'smiles', 'with', 'soft', 'deceitful', 'wiles', 'grew', 'both', 'day', 'night', 'till', 'bore', 'apple', 'bright', 'my', 'foe', 'beheld', 'shine', 'he', 'knew', 'that', 'it', 'was', 'mine', 'into', 'my', 'garden', 'stole', 'when', 'night', 'had', 'veild', 'pole', 'in', 'morning', 'glad', 'i', 'see', 'my', 'foe', 'outstretched', 'beneath', 'the', 'tree']\n",
+      "81\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
+    "\n",
     "\n",
     "poem = \"\"\"I was angry with my friend; \n",
     "I told my wrath, my wrath did end.\n",
@@ -158,7 +261,26 @@
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "poem = re.split('[^a-zA-Z]', poem)\n",
+    "poem = [e.lower() for e in poem if e!=\",\" and e!=\"\"]\n",
+    "print(poem)\n",
+    "print(len(poem))\n",
+    "print(len(blacklist))\n",
+    "\n",
+    "# próximamente hacer función\n",
+    "for palabra in poem:\n",
+    "    if palabra in blacklist:\n",
+    "        poem.remove(palabra)\n",
+    "print(poem)\n",
+    "print(len(poem))\n",
+    "\n",
+    "\n",
+    "# !! palabras del texto que no aparecen en la lista !!\n",
+    "\n",
+    "# parsing: dividing a string into tokens based on the given delimiters.\n",
+    "# token: one piece of information \"a word\"\n",
+    "# Elimine todos los caracteres que no sean letras \n",
+    "# convierta todas las palabras a minúsculas.\n"
    ]
   },
   {
@@ -172,14 +294,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['T', 'P']\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "poem = re.findall('[A-Z]', poem)\n",
+    "print(poem)\n",
+    "\n",
+    "# devolver todos los caracteres en mayúsculas de la cadena a continuación."
    ]
   },
   {
@@ -191,13 +324,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "#print(type(data))\n",
+    "#m = [e for e in data if re.search('[0-9]',e)]\n",
+    "n = [e for e in data if re.search('[\\d]',e)]\n",
     "\n",
-    "# Your code here:\n"
+    "#print(m)\n",
+    "print(n)\n",
+    "# re.search función para devolver los elementos que contengan números\n"
    ]
   },
   {
@@ -213,13 +359,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "data = [e for e in data if re.search('[\\d]',e)]\n",
+    "data = [e for e in data if re.search('[a-z]',e)]\n",
+    "\n",
+    "print(data)\n",
+    "\n",
+    "# Your code here:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -238,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
