--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "'Durante un tiempo no estuvo segura de si su marido era su marido.'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -150,9 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Some': 2, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire': 2, 'ice': 2, 'From': 1, 'what': 1, 'I’ve': 1, 'tasted': 1, 'of': 2, 'desire': 1, 'I': 3, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'But': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 1, 'perish': 1, 'twice': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'To': 1, 'that': 1, 'for': 1, 'destruction': 1, 'Is': 1, 'also': 1, 'great': 1, 'And': 1, 'would': 1, 'suffice': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -165,7 +173,20 @@
     "And would suffice.\"\"\"\n",
     "# Your code here:\n",
     "\n",
-    "\n"
+    "poem=poem.replace (\",\", \"\")\n",
+    "poem=poem.replace (\".\", \"\")\n",
+    "poem=poem.replace (\"\\n\", \" \")\n",
+    "dic = {}\n",
+    "\n",
+    "for word in poem.split (\" \"):\n",
+    "    if word in line:   \n",
+    "        dic[word]= line.count(word)\n",
+    "    \n",
+    "print (dic) \n",
+    "\n",
+    "\n",
+    "\n",
+    "      \n"
    ]
   },
   {
@@ -177,9 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i was angry with my friend i told my wrath my wrath did endi was angry with my foe i told it not my wrath did grow and i waterd it in fearsnight & morning with my tears and i sunned it with smilesand with soft deceitful wiles and it grew both day and night till it bore an apple bright and my foe beheld it shineand he knew that it was mine and into my garden stole when  night had veild  pole in  morning glad i see my foe outstretched beneath  tree\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
@@ -203,6 +232,15 @@
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
+    "x = poem.lower().replace(\":\",\"\").replace(\";\",\"\").replace(\".\",\"\").replace(\",\",\"\").replace(\"\\n\",\"\")\n",
+    "y = \"\"\n",
+    "for word in x.split(\" \"):\n",
+    "    if word in blacklist:\n",
+    "        y = ''.join (x.replace (word,\"\"))\n",
+    "print (y)\n",
+    "    \n",
+    "\n",
+    "\n",
     "# Your code here:\n"
    ]
   },
@@ -217,14 +255,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 191,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['T', 'P']\n"
+     ]
+    }
+   ],
    "source": [
+    "import re\n",
+    "\n",
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
-    "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "print (re.findall('[A-Z]', poem))\n",
+    "\n"
    ]
   },
   {
@@ -236,13 +285,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 241,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "l = []\n",
     "\n",
-    "# Your code here:\n"
+    "for e in data:\n",
+    "    if re.search('[\\d]', e):\n",
+    "        l.append (e)\n",
+    "\n",
+    "print(l)\n",
+    "    \n",
+    "\n",
+    "#Me ha costado entender que, como condición booleana, el método re.search() puede usarse en un if statement\n"
    ]
   },
   {
@@ -258,13 +323,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "\n",
+    "l = []\n",
+    "for e in data:\n",
+    "    if re.search('[\\d]|[a-z]', e):\n",
+    "        l.append (e)\n",
+    "        \n",
+    "print (l)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "# Your code here:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
