Primer intento challenge 1

--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Durante un tiempo no estuvo segura de si su marido era su marido.'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\" \".join(str_list)+\".\"\n"
    ]
   },
   {
@@ -50,12 +62,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grocery list: bananas, bread, brownie mix, broccoli.\n"
+     ]
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "str=\"Grocery list: \"\n",
+    "lst=[]\n",
+    "#for f in food_list:\n",
+    "#    if \" \".join(f).lower().startswith(\"b\"):\n",
+    "#        lst.append(f.lower())\n",
+    "#str=str+\", \".join(lst)+\".\"\n",
+    "#print(str)\n",
+    "\n",
+    "str=str+ \", \".join([f.lower() for f in food_list if \" \".join(f).lower().startswith(\"b\")])+\".\"\n",
+    "print(str)"
    ]
   },
   {
@@ -69,17 +99,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius: 4.5 is: 63.61725123519331\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
     "string1 = \"The area of the circle with radius:\"\n",
     "string2  = \"is:\"\n",
     "radius = 4.5\n",
-    "\n",
     "def area(x, pi = math.pi):\n",
+    "    ar=pi*x**2\n",
+    "    return ar\n",
+    "ar=area(radius)\n",
+    "print(string1,radius,string2 ,ar)\n",
+    "\n",
+    "\n",
+    "\n",
     "    # This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
     "    # Input: Float (and default value for pi)\n",
     "    # Output: Float\n",
@@ -106,9 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'some': 2, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire': 2, 'ice': 2, 'from': 1, 'what': 1, 'i’ve': 1, 'tasted': 1, 'of': 2, 'desire': 1, 'i': 3, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'but': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 2, 'perish': 1, 'twice': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'that': 1, 'for': 1, 'destruction': 1, 'is': 1, 'also': 1, 'great': 1, 'and': 1, 'would': 1, 'suffice': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -120,7 +172,11 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "poem1=re.sub('[%s]' % re.escape(string.punctuation), '', poem)\n",
+    "poem1=poem1.lower().split()\n",
+    "repeat= dict((i, poem1.count(i)) for i in poem1)\n",
+    "print(repeat)"
    ]
   },
   {
@@ -132,9 +188,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['with', 'bright', 'into', 'deceitful', 'he', 'foe', 'tears', 'outstretched', 'knew', 'glad', 'when', 'morning', 'smiles', 'both', 'beheld', 'did', 'day', 'beneath', 'that', 'grew', 'sunned', 'bore', 'grow', 'tree', 'shine', 'pole', 'waterd', 'veild', 'my', 'friend', 'had', 'wiles', 'till', 'not', 'soft', 'mine', 'see', 'end', 'wrath', 'was', 'fears', 'garden', 'apple', 'i', 'stole', 'night', 'told', 'angry']\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
@@ -158,7 +222,17 @@
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "poem1=re.sub('[%s]' % re.escape(string.punctuation), '', poem)\n",
+    "poem1=poem1.lower().split()\n",
+    "\n",
+    "\n",
+    "def Diff(poem1, blacklist):\n",
+    "    #a=list(set(poem1)-(set(blacklist)))\n",
+    "    a=list(set(poem1).difference(set(blacklist)))\n",
+    "    return a\n",
+    "a = Diff(poem1, blacklist)\n",
+    "print(a)"
    ]
   },
   {
@@ -172,14 +246,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['T', 'P']\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "print(re.findall('[A-Z]', poem))"
    ]
   },
   {
@@ -191,13 +274,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found a match in 123abc\n",
+      "Found a match in abc123\n",
+      "Found a match in JohnSmith1\n",
+      "Found a match in ABBY4\n",
+      "NONE\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "pattern=\"\\d\"\n",
+    "for i in data:\n",
+    "    if re.search(pattern, i):\n",
+    "        print(\"Found a match in {0}\".format(i))\n",
+    "    else:\n",
+    "        print(\"NONE\")"
    ]
   },
   {
@@ -213,13 +314,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found a match in 123abc\n",
+      "Found a match in abc123\n",
+      "Found a match in JohnSmith1\n",
+      "NONE\n",
+      "NONE\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "# Your code here:\n",
+    "pattern=\"\\d\"\n",
+    "pattern1=\"[a-z]\"\n",
+    "for i in data:\n",
+    "    if re.search(pattern, i) and re.search(pattern1, i):\n",
+    "        print(\"Found a match in {0}\".format(i))\n",
+    "    else:\n",
+    "        print(\"NONE\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -238,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
