--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -54,11 +54,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "def find_missing_letter(chars):\n",
+    "    a=[\"a\",\"b\",\"c\",\"d\",\"e\",\"f\",\"g\",\"h\",\"i\",\"f\",\"g\",\"h\",\"j\",\"k\",\"l\",\"m\",\"n\",\"o\",\"p\",\"q\",\"r\",\"s\",\"t\",\"u\",\"v\",\"w\",\"y\",\"z\"]\n",
+    "    b= [x.upper() for x in a]\n",
+    "    for i in range(len(a)):\n",
+    "        if chars[0].isupper():\n",
+    "            for i in range(len(a)):\n",
+    "                if chars[0]==a[i]:\n",
+    "                    d=a[i:i+len(chars)]\n",
+    "                    for i in range(len(d)):\n",
+    "                        e=set(d).difference(set(chars))\n",
+    "                        print(e)\n",
+    "                        return e\n",
+    "        else:\n",
+    "            for i in range(len(b)):\n",
+    "                if chars[0]==b[i]:\n",
+    "                    d=a[i:i+len(chars)]\n",
+    "                    for i in range(len(d)):\n",
+    "                        e=set(d).difference(set(chars))\n",
+    "                        print(e)\n",
+    "                        return e\n",
+    "\n",
+    "\n",
+    "chars=[\"e\",\"g\",\"h\"]\n",
+    "find_missing_letter(chars)"
    ]
   },
   {
@@ -307,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
