Before poem exercise

--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Durante un tiempo no estuvo segura de si su marido era su marido...'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "\" \".join(str_list) + \"...\""
    ]
   },
   {
@@ -50,12 +63,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Grocery_list: bananas, bread, brownie mix, broccoli'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "# Must include:\n",
+    "# comma, \" \", period(end), only b-food, lowercase\n",
+    "\n",
+    "\"Grocery_list: \" + \", \".join([i.lower() for i in food_list if i.startswith(\"B\") or i.startswith(\"b\")])\n"
    ]
   },
   {
@@ -69,17 +97,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius: 4.5 is: 63.61725123519331\n"
+     ]
+    }
+   ],
    "source": [
-    "import math\n",
-    "\n",
-    "string1 = \"The area of the circle with radius:\"\n",
-    "string2  = \"is:\"\n",
-    "radius = 4.5\n",
-    "\n",
-    "def area(x, pi = math.pi):\n",
     "    # This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
     "    # Input: Float (and default value for pi)\n",
     "    # Output: Float\n",
@@ -88,27 +117,51 @@
     "    # Sample Output: 78.53981633\n",
     "    \n",
     "    # Your code here:\n",
+    "    # a=2*pi+radius\n",
     "    \n",
-    "    \n",
-    "# Your output string here:"
+    "# Your output string here:\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "string1 = \"The area of the circle with radius:\"\n",
+    "string2  = \"is:\"\n",
+    "radius = 4.5\n",
+    "\n",
+    "def area(x, pi = math.pi):\n",
+    "        a = (x**2) * pi\n",
+    "        return a\n",
+    "\n",
+    "print(string1, radius, string2, area(radius))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Challenge 2 - Splitting Strings\n",
+    "### Challenge 2\n",
     "\n",
-    "We have first looked at combining strings into one long string. There are times where we need to do the opposite and split the string into smaller components for further analysis. \n",
+    "We have first looked at combining strings into one long string. There are times where we need to do the opposite and split the string into smaller components for further analysis.\n",
     "\n",
     "In the cell below, split the string into a list of strings using the space delimiter. Count the frequency of each word in the string in a dictionary. Strip the periods, line breaks and commas from the text. Make sure to remove empty strings from your dictionary."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'replace'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-41-5f39a9fe198c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mpoem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0mn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\\.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'replace'"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -120,7 +173,33 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "# primero separar por palabras\n",
+    "# segundo que forme una lista\n",
+    "# cuenta la frecuencia de cada una\n",
+    "# quitar signos de puntuación y saltos\n",
+    "# formar un diccionario con las palabras y frecuencias\n",
+    "\n",
+    "\n",
+    "\n",
+    "l= poem.split()\n",
+    "n=l.replace(\"\\n\",\"\\.\")\n",
+    "                        \n",
+    "print(n)                        \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "import statistics as sts\n",
+    "\n",
+    "def test(sq):\n",
+    "    mu = sts.mean(sq)\n",
+    "    grades = {\n",
+    "        'h': len([num for num in sq if num in (9, 10)]), \n",
+    "        'a': len([num for num in sq if num in (7, 8)]), \n",
+    "        'l': len([num for num in sq if num < 7])\n",
+    "        }\n",
+    "    return [round(mu, 3), grades] + ['They did well'] * (grades.get('h') == len(sq))"
    ]
   },
   {
